<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="digitized.gamehub.createParty.CreatePartyViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_party_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_title"
                style="@style/txt_title"
                android:layout_height="wrap_content"
                android:text="@string/create_game_party"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_error"
                style="@style/txt_subscript"
                android:text="@string/fields_empty_error"
                android:textColor="@color/ruby_red"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

            <TextView
                android:id="@+id/txt_party_name_label"
                style="@style/txt_label"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/party_name"
                android:text="@string/party_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_error" />

            <EditText
                android:id="@+id/txt_party_name"
                style="@style/txt_field"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_party_name_label" />

            <TextView
                android:id="@+id/txt_party_game"
                style="@style/txt_label"
                android:text="@string/select_game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_party_name" />

            <Spinner
                android:id="@+id/spr_party_game"
                style="@style/custom_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_party_game" />

            <TextView
                android:id="@+id/txt_party_date_label"
                style="@style/txt_label"
                android:text="@string/party_when"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spr_party_game" />

            <EditText
                android:id="@+id/txt_party_date"
                style="@style/txt_field"
                android:autofillHints="@string/party_when"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_party_date_label" />

            <TextView
                android:id="@+id/subscript"
                style="@style/txt_subscript"
                android:text="@string/date_format"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_party_date" />

            <TextView
                android:id="@+id/txt_max_size_label"
                style="@style/txt_label"
                android:text="@string/max_party_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subscript" />

            <EditText
                android:id="@+id/txt_max_size"
                style="@style/txt_field"
                android:autofillHints="@string/max_size_hint"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_max_size_label" />

            <TextView
                android:id="@+id/txt_party_where_label"
                style="@style/txt_label"
                android:text="@string/party_where"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_max_size" />

            <TextView
                android:id="@+id/txt_party_where"
                style="@style/txt_field"
                android:text="@string/party_where_txt"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_party_where_label" />

            <Button
                android:id="@+id/btn_create_game_party"
                style="@style/btn_large_primary"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button_green"
                android:text="@string/create_game_party"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_party_where" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>