<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/map_fragment"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/to_map" />

    <item
        android:id="@+id/party_overview_fragment"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/party_overview" />

    <item
        android:id="@+id/create_party_fragment"
        android:icon="@drawable/ic_group_add_black_24dp"
        android:title="@string/create_game_party" />

    <!--        <item-->
    <!--            android:id="@+id/nav_create_game_view"-->
    <!--            android:title="@string/new_game"-->
    <!--            android:icon="@drawable/ic_videogame_asset_black_24dp"/>-->

    <item
        android:id="@+id/account_settings_fragment"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/account_settings" />
</menu>